  thanks to Sutharshan Balachandren.
- rfe #2981999 [interface] Default sort order is now SMART.
- rfe #2972969 [interface] Fix flipping of headers in non-IE browsers.
+ rfe #2964518 [interface] Allow to choose servers from configuration for
  synchronisation.
+ rfe #2988633 [relation] Improve ON DELETE/ON UPDATE drop-downs
+ rfe #2988629 [relation] Improve labels in relation view 

3.3.3.0 (not yet released)
- patch #2982480 [navi] Do not group if there would be one table in group,
  thanks to Lorikeet Lee.
- patch #2983492 [sync] When asking to synchronize Structure and Data,
  only Structure is done, thanks to Ankit Gupta - ankitgupta3
- patch #2984893 [engines] InnoDB storage page emits a warning,
  thanks to Madhura Jayaratne - madhuracj
- bug #2974687, bug #2974692 [compatibility] PHPExcel : IBM AIX iconv() does not work,
  thanks to Björn Wiberg - bwiberg
- bug #2983066 [interface] Flush table on table operations shows the query twice, 
  thanks to Martynas Mickevičius - BlinK_
- bug #2983060, patch #2987900 [interface] Fix initial state of tables in
  designer, thanks to Sutharshan Balachandren.

3.3.2.0 (2010-04-13)
- patch #2969449 [core] Name for MERGE engine varies depending on the
  MySQL version, thanks to Dieter Adriaenssens - ruleant
- bug #2966078 [browse] Incorrect LIMIT is saved and sticks while browsing
- bug #2967366 [Structure] Some results of Propose table structure are
  shown in hex
- bug #2967565 [insert] UNHEX not selected by default when inserting BINARY
- [navi] Changed link to git repository on main page
- bug #2972232 [menu] Import menu tab not present on main page
- patch #2976790 [menu] Go to the upper level after table DROP,
  thanks to Kaarel Nummert - kaarelnu
- patch #2978815 [pdf] Fix generating PDF with table dimensions, thanks to BlinK_
- patch #2977725 [export] XML wrongly encoded, thanks to Victor Volkov - hanut
- patch #2979234 [import] Create tables with current charset and collation.